--- a/index.css
+++ b/index.css
@@ -146,8 +146,8 @@ body {
         width: 140px;
         height: 245px;
        
-        bottom: 44px;
-        left: 10%;
+        bottom: 14px;
+        left: 12%;
         margin-left: 0;
         transform: none;
     }
@@ -164,9 +164,9 @@ body {
         width: 120px;
         height: 210px;
        
-        bottom: 14px;
+        bottom: 4px;
         left: 3%;
-        
+        z-index: -1;
     }
 }
 
@@ -202,6 +202,6 @@ body {
         width: 60px;
         height: 105px;
         left: 0;
-        bottom: 4px;
+        
     }
 }
