--- a/style/arenas.css
+++ b/style/arenas.css
@@ -1,28 +1,6 @@
-@font-face {
-    font-family: 'Mortal Kombat 3';
-    src: url('../assets/fonts/MortalKombat3-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
 
 
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-}
 
-html {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: #424542;
-    margin: 0;
-    padding: 0;
-}
 
 .root {
     display: flex;
@@ -174,7 +152,7 @@ body {
     padding: 6px 40px;
     overflow: scroll;
     color: white;
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 
