--- a/style/arenas.css
+++ b/style/arenas.css
@@ -1,7 +1,3 @@
-
-
-
-
 .root {
     display: flex;
     justify-content: center;
@@ -149,13 +145,15 @@
     background-position: center;
     border-top: 4px solid #f5d100;
 
-    padding: 6px 40px;
+    padding: 10px 40px;
     overflow: scroll;
-    color: white;
-    font-family: 'Arial', sans-serif;
+    
+    font-size: 16px;
 }
 
-
+.chat > p{
+    margin-bottom: 12px;
+}
 
 .chat_player-1,
 .chat_player-2{
@@ -326,6 +324,8 @@
     font-weight: 700;
     
     text-transform: uppercase;
+
+    font-size: 20px;
 }
 
 .ul {
@@ -335,6 +335,8 @@
     display: flex;
     justify-content: space-between;
     color: #efefef;
+
+    font-size: 16px;
 }
 .ul label {
     cursor: pointer;
@@ -480,6 +482,16 @@ input[type=radio]:checked + label > span:hover {
     .ul label span::before{
         width: 50px;
         height: 45px;
+    }
+}
+
+@media(max-width: 425.98px){
+    .inputWrap h2{
+        font-size: 16px;
+    }
+
+    .ul{
+        font-size: 12px;
     }
 }
 
