--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,10 @@ body{
     box-sizing: border-box;
 }
 
+p {
+	margin: 0;
+}
+
 @font-face {
     font-family: 'Mortal Kombat 3';
     src: url('../assets/fonts/MortalKombat3-Regular.woff2') format('woff2');
