--- a/style/select.css
+++ b/style/select.css
@@ -1,19 +1,3 @@
-
-
-
-
-.root {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   
-    width: 100%;
-    position: relative;
-
-    padding-top: 10px;
-}
-
 .title {
     
     font-family: "Mortal Kombat 3";
@@ -24,29 +8,14 @@
     margin-bottom: 20px;
 }
 
-.player {
-    position: absolute;
-    width: 210px;
-    height: 367px;
-    z-index: 3;
-    bottom: 44px;
-    left: 50%;
-    margin-left: -105px;
-    transform: translate(-205%, 0px);
-}
-
-.player img {
-    max-width: 100%;
-    max-height: 100%;
-    height: 100%;
-}
-
 .parent {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+
+    position: relative;
 }
 
 .div1 { grid-area: 1 / 1 / 2 / 2; }
@@ -74,7 +43,7 @@
 .div23 { grid-area: 4 / 5 / 5 / 6; }
 .div24 { grid-area: 4 / 6 / 5 / 7; }
 
-.row {
+/*.row {
     display: flex;
     position: relative;
     z-index: 1;
@@ -82,7 +51,27 @@
 
 .row:hover {
     z-index: 2;
+}*/
+
+.player {
+    position: absolute;
+    width: 210px;
+    height: 345px;
+    z-index: 3;
+    bottom: 0;
+    left: -8%;
+  
+    border: 3px dotted #ff02f4;
 }
+
+.player img {
+    display: block;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 .character {
     width: 137px;
     height: 176px;   
@@ -116,11 +105,14 @@
 }
 
 .character img {
+    display: block;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
-@media(max-width: 1025px){
+
+@media(max-width: 1024.98px){
     .character{
         width: 100px;
         height: 128px;
@@ -129,11 +121,7 @@
     .player {
         width: 140px;
         height: 245px;
-       
-        bottom: 14px;
-        left: 12%;
-        margin-left: 0;
-        transform: none;
+        left: -6%;
     }
 
     .character:hover:before,
@@ -143,18 +131,15 @@
     }
 }
 
-@media(max-width: 769px){
+@media(max-width: 768.98px){
     .player {
         width: 120px;
         height: 210px;
-       
-        bottom: 4px;
-        left: 3%;
-        z-index: -1;
+        left: -3%;
     }
 }
 
-@media(max-width: 426px){
+@media(max-width: 425.98px){
     .title{
         font-size: 25px;
     }
@@ -165,8 +150,9 @@
     }
 
     .player{
-        width: 70px;
-        height: 122px;
+        width: 60px;
+        height: 110px;
+        z-index: -2;
     }
 
     .character:hover:before,
@@ -176,16 +162,15 @@
     }
 }
 
-@media(max-width: 321px){
+@media(max-width: 360.98px){
     .character{
         width: 45px;
         height: 58px;
     }
 
     .player{
-        width: 60px;
-        height: 105px;
+        width: 44px;
+        height: 88px;
         left: 0;
-        
     }
 }
